Add Android Studio vmoptions workaround for google-java-format.
Bug: 268602240
Change-Id: I41105b88a8c994d30b23a6221ecad0f68af86d6b